--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,40 +1,133 @@
 <div class="container">
   <div class="row mt-5">
-    <div class="col-4"></div>
-    <div class="col-4">
-      <div class="card bg-dark">
-        <div class="card-body">
+    <div class="col-2"></div>
+    <div class="col-8">
+      <!-- Pills navs -->
+      <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a
+            class="nav-link"
+            id="tab-login"
+            data-mdb-toggle="pill"
+            [routerLink]="['/login']"
+            routerLinkActive="router-link-active"
+            role="tab"
+            aria-controls="pills-login"
+            aria-selected="true"
+            >Login</a
+          >
+        </li>
+        <li class="nav-item" role="presentation">
+          <a
+            class="nav-link active"
+            id="tab-register"
+            data-mdb-toggle="pill"
+            [routerLink]="['/register']"
+            routerLinkActive="router-link-active"
+            role="tab"
+            aria-controls="pills-register"
+            aria-selected="false"
+            >Register</a
+          >
+        </li>
+      </ul>
+      <!-- Pills navs -->
+
+      <!-- Pills content -->
+      <div class="tab-content">
+        <div
+          class="tab-pane fade show active"
+          id="pills-login"
+          role="tabpanel"
+          aria-labelledby="tab-login"
+        >
           <form>
-            <h4 class="text-center text-white">Register</h4>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label"
-                >Email address</label
-              >
+            <!-- <div class="text-center mb-3">
+              <p>Sign in with:</p>
+              <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-facebook-f"></i>
+              </button>
+
+              <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-google"></i>
+              </button>
+
+              <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-twitter"></i>
+              </button>
+
+              <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-github"></i>
+              </button>
+            </div>
+
+            <p class="text-center">or:</p> -->
+
+            <!-- Email input -->
+            <div class="form-outline mb-4 mt-4">
               <input
                 type="email"
+                id="email"
                 class="form-control"
                 name="email"
-                [(ngModel)]="email"
               />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label"
-                >Password</label
+              <label class="form-label text-white" for="email"
+                >Email or username</label
               >
+            </div>
+
+            <!-- Password input -->
+            <div class="form-outline mb-2">
               <input
                 type="password"
-                class="form-control"
+                id="password"
                 name="password"
-                [(ngModel)]="password"
+                class="form-control"
               />
+              <label class="form-label text-white" for="password"
+                >Password</label
+              >
             </div>
+
+            <!-- 2 column grid layout -->
+            <div class="row mb-4">
+              <!-- <div class="col-md-6 d-flex justify-content-center">
+                
+                <div class="form-check mb-3 mb-md-0">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    value=""
+                    id="loginCheck"
+                    checked
+                  />
+                  <label class="form-check-label" for="loginCheck">
+                    Remember me
+                  </label>
+                </div>
+              </div> -->
+            </div>
+
+            <!-- Submit button -->
             <button
-              type="button"
-              class="btn btn-secondary"
+              type="submit"
               (click)="register()"
+              class="btn btn-primary btn-block mb-4 w-100"
             >
-              Register
+              Sign up
             </button>
+
+            <!-- Register buttons -->
+            <div class="text-center">
+              <p class="text-white">
+                already a member?
+                <a
+                  [routerLink]="['/login']"
+                  routerLinkActive="router-link-active"
+                  >Login</a
+                >
+              </p>
+            </div>
           </form>
         </div>
       </div>
