--- a/src/app/watched-list/watched-list.component.html
+++ b/src/app/watched-list/watched-list.component.html
@@ -5,7 +5,12 @@
       *ngFor="let movie of watchedList"
       class="col-md-6 col-lg-3 mb-5"
       [ngClass]="
-        s === '' || movie.title.toLowerCase().includes(s) ? 'xls' : 'xlsremove'
+        s === '' ||
+        movie.title.toLowerCase().includes(s) ||
+        (movie.tags &&
+          movie.tags!.toString().split(',').join(' ').toLowerCase().includes(s))
+          ? 'xls'
+          : 'xlsremove'
       "
     >
       <div class="card bg-dark border-secondary mb-3 h-100">
@@ -13,6 +18,7 @@
           <img
             src="{{ movie.image }}"
             class="card-img-top img-responsive"
+            style="min-height: 300px"
             alt="{{ movie.title }}"
           />
         </a>
@@ -54,7 +60,7 @@
         </div>
         <div
           class="card-footer"
-          *ngIf="movie.watched === 'yes'; else removeWatched"
+          *ngIf="movie.watched === true; else removeWatched"
         >
           <button
             (click)="toggleWatched(movie)"
