Added trailer and spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<ngx-ui-loader
+  fgsColor="#dc3545"
+  pbColor="#dc3545"
+  text="loading...."
+  textColor="white"
+></ngx-ui-loader>
 <router-outlet></router-outlet>
