--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -3,7 +3,7 @@
 <div class="card bg-dark p-4" style="max-width: 50vw; margin: auto">
   <form [formGroup]="movie" (ngSubmit)="submit()">
     <div class="form-group mb-2">
-      <label class="form-label" for="title">Name</label>
+      <label class="form-label" for="title">*Name</label>
       <input
         type="text"
         class="form-control"
@@ -21,6 +21,16 @@
         formControlName="imdbId"
         id="imdbId"
         placeholder="Enter id present in imdb url (starts with tt)"
+      />
+    </div>
+    <div class="form-group mb-2">
+      <label class="form-label" for="trailer">Trailer Link</label>
+      <input
+        type="text"
+        class="form-control"
+        formControlName="trailer"
+        id="trailer"
+        placeholder="Enter trailer link here"
       />
     </div>
     <!-- <div class="form-group">
