--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -36,6 +36,14 @@
             </div>
           </h6>
         </div>
+        <hr />
+        <div class="m-2">
+          <p><strong>Director:</strong> {{ movie.director }}</p>
+          <p><strong>Runtime:</strong> {{ movie.runtime }}</p>
+          <p><strong>Release Date:</strong> {{ movie.releaseDate }}</p>
+          <p><strong>Genres:</strong> {{ movie.genres }}</p>
+        </div>
+        <hr />
         <div
           class="card-footer"
           *ngIf="movie.watched == true; else removeWatched"
@@ -55,52 +63,29 @@
         <div class="card-body">
           <div id="description">{{ movie.description }}</div>
           <hr />
-          <div>
-            <p>Director: {{ movie.director }}</p>
-            <p>Runtime: {{ movie.runtime }}</p>
-            <p>Release Date: {{ movie.releaseDate }}</p>
-            <p>Genres: {{ movie.genres }}</p>
-          </div>
-          <hr />
-          <div>
-            <h4>Tags</h4>
-            <div
-              style="height: 57px; padding: 0px 15px 0px 15px"
-              *ngIf="movie.tags; else noTags"
-            >
-              <span
-                *ngFor="let tag of movie.tags"
-                class="badge bg-secondary me-2"
-                >{{ tag }}</span
-              >
+          <div
+            *ngIf="movie.trailer == null || movie.trailer == ''; else trailers"
+          >
+            <div class="row">
+              <div class="col-lg-6 m-auto">
+                <p><strong>Add trailer YT link here</strong></p>
+                <div class="input-group mb-3">
+                  <input
+                    [(ngModel)]="trailer"
+                    type="text"
+                    class="form-control"
+                  />
+                </div>
+                <button
+                  type="button"
+                  class="btn bg-dark btn-outline-secondary"
+                  (click)="addTrailer(movie)"
+                >
+                  Add Trailer
+                </button>
+              </div>
             </div>
           </div>
-          <div>
-            <div class="input-group mb-3">
-              <input
-                [(ngModel)]="tag"
-                type="text"
-                class="form-control"
-                placeholder="Tag"
-              />
-            </div>
-          </div>
-          <button
-            type="button"
-            class="btn btn-primary"
-            style="margin: 5px 0px !important"
-            (click)="addTag(movie)"
-          >
-            Add Tag
-          </button>
-          <button
-            type="button"
-            class="btn btn-secondary"
-            style="margin: 5px 0px !important"
-            (click)="clearTags(movie)"
-          >
-            Clear Tags
-          </button>
         </div>
       </div>
     </div>
@@ -114,7 +99,7 @@
             *ngIf="movie.watched == true; else watched"
             (click)="toggleWatched(movie)"
           >
-            <i class="fas fa-eye"><br />Unwatch</i>
+            <i class="fas fa-eye"><br />Drop</i>
           </button>
           <button
             (click)="toggleLiked(movie)"
@@ -155,6 +140,48 @@
               </div>
             </div>
           </div>
+          <hr />
+          <div>
+            <div>
+              <h4>Tags</h4>
+              <div
+                style="height: 57px; padding: 0px 15px 0px 15px"
+                *ngIf="movie.tags; else noTags"
+              >
+                <span
+                  *ngFor="let tag of movie.tags"
+                  class="badge bg-secondary me-2"
+                  >{{ tag }}</span
+                >
+              </div>
+            </div>
+            <div>
+              <div class="input-group mb-3">
+                <input
+                  [(ngModel)]="tag"
+                  type="text"
+                  class="form-control"
+                  placeholder="Tag"
+                />
+              </div>
+            </div>
+            <button
+              type="button"
+              class="btn btn-primary"
+              style="margin: 5px 0px !important"
+              (click)="addTag(movie)"
+            >
+              Add Tag
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              style="margin: 5px 0px !important"
+              (click)="clearTags(movie)"
+            >
+              Clear Tags
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -187,6 +214,15 @@
       <i class="far fa-eye"><br />Watch</i>
     </button>
   </ng-template>
+  <ng-template #trailers>
+    <iframe
+      width="550"
+      height="500"
+      [src]="videoUrl()"
+      style="margin-left: 20px"
+      allowfullscreen
+    ></iframe
+  ></ng-template>
 
   <ng-template #liked>
     <button
