Added Forgot Password, FirebaseError!!

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -111,7 +111,9 @@
 
               <div class="col d-flex justify-content-center">
                 <!-- Simple link -->
-                <a href="#!">Forgot password?</a>
+                <a class="btn text-primary" [routerLink]="['/forgot-password']"
+                  >Forgot password?</a
+                >
               </div>
             </div>
 
