--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -70,6 +70,7 @@
                 id="email"
                 class="form-control"
                 name="email"
+                [(ngModel)]="email"
               />
               <label class="form-label text-white" for="email"
                 >Email or username</label
@@ -83,6 +84,7 @@
                 id="password"
                 name="password"
                 class="form-control"
+                [(ngModel)]="password"
               />
               <label class="form-label text-white" for="password"
                 >Password</label
