Changed favicon and login page

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -71,7 +71,7 @@
             <button
               type="submit"
               (click)="forgotPassword()"
-              class="btn btn-primary btn-block mb-4 w-100"
+              class="btn btn-block mb-4 w-100"
             >
               Submit
             </button>
