--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -4,8 +4,8 @@
   background-color: rgb(30, 30, 30);
 }
 #description {
-  max-width: 590px;
-  max-height: 192px;
+  max-width: 100%;
+  max-height: 30%;
   overflow-y: auto;
   overflow-x: hidden;
   padding-right: 20px;
@@ -26,4 +26,14 @@
   /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
   border-radius: 10px;
   background-color: #f5f5f5;
+}
+
+.section-trialer {
+  height: 60% !important;
+  width: 100% !important;
+}
+
+iframe {
+  width: 100% !important;
+  height: 100% !important;
 }
