--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -114,7 +114,7 @@
             <button
               type="submit"
               (click)="register()"
-              class="btn btn-primary btn-block mb-4 w-100"
+              class="btn btn-block mb-4 w-100"
             >
               Sign up
             </button>
